--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,8 @@
-
 remote_theme: broccolini/swiss
-
-title: Swiss Jekyll Theme
-
-description: A bold typographic theme inspired by Swiss design.
-
-github_repo: jekyll # the GitHub repo name for your project, it makes a link on the home page
-
+title: Puyopop Fan
+description: puyopop fanclub ouyeah
+github_repo: jekyll
 github_username: jekyll
-
 social_link: twitter
-
-social_username: jekyllrb # twitter (default), instagram, medium, or dribbble
-
-theme_color: black # Choose from: black (default), blue, gray, magenta, orange, red, white, and yellow.
+social_username: jekyllrb
+theme_color: black
