--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: broccolini/swiss
-title: Puyopop Fan
+title: Puyopop Fanclub
 description: puyopop fanclub ouyeah
 github_repo: jekyll
 github_username: jekyll
